Backtracking werkt niet helemaal, spijtig genoeg.